--- a/Quarto Document.html
+++ b/Quarto Document.html
@@ -77,23 +77,23 @@ ul.task-list li input[type="checkbox"] {
 <div class="cell-output-display">
 <div id="tbl-one" class="anchored">
 
-<div id="kivapbcdqc" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#kivapbcdqc table {
+<div id="fxnfdjuqoe" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#fxnfdjuqoe table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#kivapbcdqc thead, #kivapbcdqc tbody, #kivapbcdqc tfoot, #kivapbcdqc tr, #kivapbcdqc td, #kivapbcdqc th {
+#fxnfdjuqoe thead, #fxnfdjuqoe tbody, #fxnfdjuqoe tfoot, #fxnfdjuqoe tr, #fxnfdjuqoe td, #fxnfdjuqoe th {
   border-style: none;
 }
 
-#kivapbcdqc p {
+#fxnfdjuqoe p {
   margin: 0;
   padding: 0;
 }
 
-#kivapbcdqc .gt_table {
+#fxnfdjuqoe .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -119,12 +119,12 @@ ul.task-list li input[type="checkbox"] {
   border-left-color: #D3D3D3;
 }
 
-#kivapbcdqc .gt_caption {
+#fxnfdjuqoe .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#kivapbcdqc .gt_title {
+#fxnfdjuqoe .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -136,7 +136,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-width: 0;
 }
 
-#kivapbcdqc .gt_subtitle {
+#fxnfdjuqoe .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -148,7 +148,7 @@ ul.task-list li input[type="checkbox"] {
   border-top-width: 0;
 }
 
-#kivapbcdqc .gt_heading {
+#fxnfdjuqoe .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -160,13 +160,13 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#kivapbcdqc .gt_bottom_border {
+#fxnfdjuqoe .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#kivapbcdqc .gt_col_headings {
+#fxnfdjuqoe .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -181,7 +181,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#kivapbcdqc .gt_col_heading {
+#fxnfdjuqoe .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -201,7 +201,7 @@ ul.task-list li input[type="checkbox"] {
   overflow-x: hidden;
 }
 
-#kivapbcdqc .gt_column_spanner_outer {
+#fxnfdjuqoe .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -213,15 +213,15 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 4px;
 }
 
-#kivapbcdqc .gt_column_spanner_outer:first-child {
+#fxnfdjuqoe .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#kivapbcdqc .gt_column_spanner_outer:last-child {
+#fxnfdjuqoe .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#kivapbcdqc .gt_column_spanner {
+#fxnfdjuqoe .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -233,11 +233,11 @@ ul.task-list li input[type="checkbox"] {
   width: 100%;
 }
 
-#kivapbcdqc .gt_spanner_row {
+#fxnfdjuqoe .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#kivapbcdqc .gt_group_heading {
+#fxnfdjuqoe .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -263,7 +263,7 @@ ul.task-list li input[type="checkbox"] {
   text-align: left;
 }
 
-#kivapbcdqc .gt_empty_group_heading {
+#fxnfdjuqoe .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -278,15 +278,15 @@ ul.task-list li input[type="checkbox"] {
   vertical-align: middle;
 }
 
-#kivapbcdqc .gt_from_md > :first-child {
+#fxnfdjuqoe .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#kivapbcdqc .gt_from_md > :last-child {
+#fxnfdjuqoe .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#kivapbcdqc .gt_row {
+#fxnfdjuqoe .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -305,7 +305,7 @@ ul.task-list li input[type="checkbox"] {
   overflow-x: hidden;
 }
 
-#kivapbcdqc .gt_stub {
+#fxnfdjuqoe .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -318,7 +318,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#kivapbcdqc .gt_stub_row_group {
+#fxnfdjuqoe .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -332,15 +332,15 @@ ul.task-list li input[type="checkbox"] {
   vertical-align: top;
 }
 
-#kivapbcdqc .gt_row_group_first td {
+#fxnfdjuqoe .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#kivapbcdqc .gt_row_group_first th {
+#fxnfdjuqoe .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#kivapbcdqc .gt_summary_row {
+#fxnfdjuqoe .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -350,16 +350,16 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#kivapbcdqc .gt_first_summary_row {
+#fxnfdjuqoe .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#kivapbcdqc .gt_first_summary_row.thick {
+#fxnfdjuqoe .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#kivapbcdqc .gt_last_summary_row {
+#fxnfdjuqoe .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -369,7 +369,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#kivapbcdqc .gt_grand_summary_row {
+#fxnfdjuqoe .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#kivapbcdqc .gt_first_grand_summary_row {
+#fxnfdjuqoe .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -389,7 +389,7 @@ ul.task-list li input[type="checkbox"] {
   border-top-color: #D3D3D3;
 }
 
-#kivapbcdqc .gt_last_grand_summary_row_top {
+#fxnfdjuqoe .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -399,11 +399,11 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#kivapbcdqc .gt_striped {
+#fxnfdjuqoe .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#kivapbcdqc .gt_table_body {
+#fxnfdjuqoe .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -412,7 +412,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#kivapbcdqc .gt_footnotes {
+#fxnfdjuqoe .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -426,7 +426,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#kivapbcdqc .gt_footnote {
+#fxnfdjuqoe .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -435,7 +435,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#kivapbcdqc .gt_sourcenotes {
+#fxnfdjuqoe .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -449,7 +449,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#kivapbcdqc .gt_sourcenote {
+#fxnfdjuqoe .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -457,63 +457,63 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#kivapbcdqc .gt_left {
+#fxnfdjuqoe .gt_left {
   text-align: left;
 }
 
-#kivapbcdqc .gt_center {
+#fxnfdjuqoe .gt_center {
   text-align: center;
 }
 
-#kivapbcdqc .gt_right {
+#fxnfdjuqoe .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#kivapbcdqc .gt_font_normal {
+#fxnfdjuqoe .gt_font_normal {
   font-weight: normal;
 }
 
-#kivapbcdqc .gt_font_bold {
+#fxnfdjuqoe .gt_font_bold {
   font-weight: bold;
 }
 
-#kivapbcdqc .gt_font_italic {
+#fxnfdjuqoe .gt_font_italic {
   font-style: italic;
 }
 
-#kivapbcdqc .gt_super {
+#fxnfdjuqoe .gt_super {
   font-size: 65%;
 }
 
-#kivapbcdqc .gt_footnote_marks {
+#fxnfdjuqoe .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#kivapbcdqc .gt_asterisk {
+#fxnfdjuqoe .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#kivapbcdqc .gt_indent_1 {
+#fxnfdjuqoe .gt_indent_1 {
   text-indent: 5px;
 }
 
-#kivapbcdqc .gt_indent_2 {
+#fxnfdjuqoe .gt_indent_2 {
   text-indent: 10px;
 }
 
-#kivapbcdqc .gt_indent_3 {
+#fxnfdjuqoe .gt_indent_3 {
   text-indent: 15px;
 }
 
-#kivapbcdqc .gt_indent_4 {
+#fxnfdjuqoe .gt_indent_4 {
   text-indent: 20px;
 }
 
-#kivapbcdqc .gt_indent_5 {
+#fxnfdjuqoe .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
@@ -843,23 +843,23 @@ ul.task-list li input[type="checkbox"] {
 <div class="cell-output-display">
 <div id="tbl-two" class="anchored">
 
-<div id="skkompyybv" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#skkompyybv table {
+<div id="fzntycobfy" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#fzntycobfy table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#skkompyybv thead, #skkompyybv tbody, #skkompyybv tfoot, #skkompyybv tr, #skkompyybv td, #skkompyybv th {
+#fzntycobfy thead, #fzntycobfy tbody, #fzntycobfy tfoot, #fzntycobfy tr, #fzntycobfy td, #fzntycobfy th {
   border-style: none;
 }
 
-#skkompyybv p {
+#fzntycobfy p {
   margin: 0;
   padding: 0;
 }
 
-#skkompyybv .gt_table {
+#fzntycobfy .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -885,12 +885,12 @@ ul.task-list li input[type="checkbox"] {
   border-left-color: #D3D3D3;
 }
 
-#skkompyybv .gt_caption {
+#fzntycobfy .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#skkompyybv .gt_title {
+#fzntycobfy .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -902,7 +902,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-width: 0;
 }
 
-#skkompyybv .gt_subtitle {
+#fzntycobfy .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -914,7 +914,7 @@ ul.task-list li input[type="checkbox"] {
   border-top-width: 0;
 }
 
-#skkompyybv .gt_heading {
+#fzntycobfy .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -926,13 +926,13 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#skkompyybv .gt_bottom_border {
+#fzntycobfy .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#skkompyybv .gt_col_headings {
+#fzntycobfy .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -947,7 +947,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#skkompyybv .gt_col_heading {
+#fzntycobfy .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -967,7 +967,7 @@ ul.task-list li input[type="checkbox"] {
   overflow-x: hidden;
 }
 
-#skkompyybv .gt_column_spanner_outer {
+#fzntycobfy .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -979,15 +979,15 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 4px;
 }
 
-#skkompyybv .gt_column_spanner_outer:first-child {
+#fzntycobfy .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#skkompyybv .gt_column_spanner_outer:last-child {
+#fzntycobfy .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#skkompyybv .gt_column_spanner {
+#fzntycobfy .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -999,11 +999,11 @@ ul.task-list li input[type="checkbox"] {
   width: 100%;
 }
 
-#skkompyybv .gt_spanner_row {
+#fzntycobfy .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#skkompyybv .gt_group_heading {
+#fzntycobfy .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1029,7 +1029,7 @@ ul.task-list li input[type="checkbox"] {
   text-align: left;
 }
 
-#skkompyybv .gt_empty_group_heading {
+#fzntycobfy .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -1044,15 +1044,15 @@ ul.task-list li input[type="checkbox"] {
   vertical-align: middle;
 }
 
-#skkompyybv .gt_from_md > :first-child {
+#fzntycobfy .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#skkompyybv .gt_from_md > :last-child {
+#fzntycobfy .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#skkompyybv .gt_row {
+#fzntycobfy .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1071,7 +1071,7 @@ ul.task-list li input[type="checkbox"] {
   overflow-x: hidden;
 }
 
-#skkompyybv .gt_stub {
+#fzntycobfy .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1084,7 +1084,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#skkompyybv .gt_stub_row_group {
+#fzntycobfy .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1098,15 +1098,15 @@ ul.task-list li input[type="checkbox"] {
   vertical-align: top;
 }
 
-#skkompyybv .gt_row_group_first td {
+#fzntycobfy .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#skkompyybv .gt_row_group_first th {
+#fzntycobfy .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#skkompyybv .gt_summary_row {
+#fzntycobfy .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -1116,16 +1116,16 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#skkompyybv .gt_first_summary_row {
+#fzntycobfy .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#skkompyybv .gt_first_summary_row.thick {
+#fzntycobfy .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#skkompyybv .gt_last_summary_row {
+#fzntycobfy .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1135,7 +1135,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#skkompyybv .gt_grand_summary_row {
+#fzntycobfy .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -1145,7 +1145,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#skkompyybv .gt_first_grand_summary_row {
+#fzntycobfy .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1155,7 +1155,7 @@ ul.task-list li input[type="checkbox"] {
   border-top-color: #D3D3D3;
 }
 
-#skkompyybv .gt_last_grand_summary_row_top {
+#fzntycobfy .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1165,11 +1165,11 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#skkompyybv .gt_striped {
+#fzntycobfy .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#skkompyybv .gt_table_body {
+#fzntycobfy .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -1178,7 +1178,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#skkompyybv .gt_footnotes {
+#fzntycobfy .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1192,7 +1192,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#skkompyybv .gt_footnote {
+#fzntycobfy .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -1201,7 +1201,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#skkompyybv .gt_sourcenotes {
+#fzntycobfy .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1215,7 +1215,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#skkompyybv .gt_sourcenote {
+#fzntycobfy .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -1223,63 +1223,63 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#skkompyybv .gt_left {
+#fzntycobfy .gt_left {
   text-align: left;
 }
 
-#skkompyybv .gt_center {
+#fzntycobfy .gt_center {
   text-align: center;
 }
 
-#skkompyybv .gt_right {
+#fzntycobfy .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#skkompyybv .gt_font_normal {
+#fzntycobfy .gt_font_normal {
   font-weight: normal;
 }
 
-#skkompyybv .gt_font_bold {
+#fzntycobfy .gt_font_bold {
   font-weight: bold;
 }
 
-#skkompyybv .gt_font_italic {
+#fzntycobfy .gt_font_italic {
   font-style: italic;
 }
 
-#skkompyybv .gt_super {
+#fzntycobfy .gt_super {
   font-size: 65%;
 }
 
-#skkompyybv .gt_footnote_marks {
+#fzntycobfy .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#skkompyybv .gt_asterisk {
+#fzntycobfy .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#skkompyybv .gt_indent_1 {
+#fzntycobfy .gt_indent_1 {
   text-indent: 5px;
 }
 
-#skkompyybv .gt_indent_2 {
+#fzntycobfy .gt_indent_2 {
   text-indent: 10px;
 }
 
-#skkompyybv .gt_indent_3 {
+#fzntycobfy .gt_indent_3 {
   text-indent: 15px;
 }
 
-#skkompyybv .gt_indent_4 {
+#fzntycobfy .gt_indent_4 {
   text-indent: 20px;
 }
 
-#skkompyybv .gt_indent_5 {
+#fzntycobfy .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
@@ -1552,6 +1552,9 @@ ul.task-list li input[type="checkbox"] {
 </table>
 </div>
 </div>
+</div>
+<div class="cell-output cell-output-stdout">
+<pre><code>[1] "3,618 (95% CI 2,846, 4,390; p&lt;0.001)"</code></pre>
 </div>
 </div>
 <p><a href="#tbl-two">Table&nbsp;2</a> This is a table showing a multivariable analysis of net cost on income level, campus residency, and state name.</p>
